--- a/templates/front/guest.html.twig
+++ b/templates/front/guest.html.twig
@@ -5,14 +5,20 @@
         <div class="col-12">
             <h3 class="mb-4">{{ guest.name }}</h3>
             <p class="mb-5 w-100">{{ guest.description }}</p>
-            <div class="row">
-                {% for media in guest.medias %}
-                    <div class="col-4 media mb-4">
-                        <img class="w-100" src="{{ asset(media.path) }}" alt="{{ media.title }}">
-                    </div>
-                {% endfor %}
-            </div>
+
+            {% if not guest.isBlocked %}
+                <div class="row">
+                    {% for media in guest.medias %}
+                        <div class="col-4 media mb-4">
+                            <img class="w-100" src="{{ asset(media.path) }}" alt="{{ media.title }}">
+                        </div>
+                    {% endfor %}
+                </div>
+            {% else %}
+                <div class="alert alert-warning">
+                    Les médias de cet invité sont actuellement indisponibles.
+                </div>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
-
