--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -19,15 +19,29 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">
+                                <a class="nav-link" href="{{ path('admin_guests') }}">
                                     Invités
                                 </a>
+
+                            </li>
+                            <li class="nav-item mb-2">
+                                <a class="nav-link text-white" href="{{ path('home') }}">← Retour au site</a>
                             </li>
                         {% endif %}
                     </ul>
                 </div>
             </nav>
+            
             <main class="col-md-9 ms-sm-auto col-lg-10 p-4">
+                {% for label, messages in app.flashes %}
+                    {% for message in messages %}
+                        <div class="alert alert-{{ label }} alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+
                 {% block admin %}{% endblock %}
             </main>
         </div>
