Tests: Couverture à 92% pour le controleur AdminGuestController

--- a/templates/admin/guests/add.html.twig
+++ b/templates/admin/guests/add.html.twig
@@ -9,7 +9,7 @@
         {{ form_row(form.password) }}
         {{ form_row(form.description) }}
         <div class="d-flex justify-content-between mt-4">
-            <button class="btn btn-primary">Créer un invité</button>
+            <button class="btn btn-primary" type="submit">Créer un invité</button>
             <a href="{{ path('admin_guests') }}" class="btn btn-secondary">← Retour à la liste</a>
         </div>
     {{ form_end(form) }}
