--- a/templates/admin/media/add.html.twig
+++ b/templates/admin/media/add.html.twig
@@ -12,6 +12,8 @@
             {{ form_row(form.title) }}
         {% endif %}
         {{ form_row(form.file) }}
+        {{ form_errors(form.file) }}
+
         <button type="submit" class="btn btn-primary">Ajouter</button>
     {{ form_end(form) }}
 {% endblock %}
