--- a/templates/admin/media/index.html.twig
+++ b/templates/admin/media/index.html.twig
@@ -23,7 +23,12 @@
                     <td><img src="{{ asset(media.path) }}" width="75" /></td>
                     <td>{{ media.title }}</td>
                     {% if is_granted('ROLE_ADMIN') %}
-                        <td>{{ media.user.name }}</td>
+                        <td>{% if media.user %}
+    {{ media.user.name }}
+{% else %}
+    <em>Utilisateur inconnu</em>
+{% endif %}
+</td>
                         <td>{{ media.album.name ?? '' }}</td>
                     {% endif %}
                     <td>
