--- a/templates/front/guest.html.twig
+++ b/templates/front/guest.html.twig
@@ -7,18 +7,23 @@
             <p class="mb-5 w-100">{{ guest.description }}</p>
 
             {% if not guest.isBlocked %}
-                <div class="row">
-                    {% for media in guest.medias %}
-                        <div class="col-4 media mb-4">
-                            <img class="w-100" src="{{ asset(media.path) }}" alt="{{ media.title }}">
-                        </div>
-                    {% endfor %}
-                </div>
-            {% else %}
-                <div class="alert alert-warning">
-                    Les médias de cet invité sont actuellement indisponibles.
-                </div>
-            {% endif %}
-        </div>
+    <div class="row">
+        {% for media in pagination %}
+            <div class="col-4 media mb-4">
+                <img class="w-100" src="{{ asset(media.path) }}" alt="{{ media.title }}">
+            </div>
+        {% endfor %}
     </div>
+
+    <div class="pagination mt-4">
+        {{ knp_pagination_render(pagination) }}
+    </div>
+{% else %}
+    <div class="alert alert-warning">
+        Les médias de cet invité sont actuellement indisponibles.
+    </div>
+{% endif %}
+
 {% endblock %}
+
+
