--- a/templates/front/portfolio.html.twig
+++ b/templates/front/portfolio.html.twig
@@ -19,7 +19,8 @@
                 {% endfor %}
             </div>
             <div class="row">
-                {% for media in medias %}
+               {% for media in pagination %}
+
                     <div class="col-4 media mb-4">
                         <img class="w-100" src="{{ asset(media.path) }}" alt="{{ media.title }}">
                         <p class="text-center mb-0 mt-2 media-title">{{ media.title }}</p>
@@ -28,5 +29,9 @@
             </div>
         </div>
     </div>
+    <div class="pagination mt-4">
+    {{ knp_pagination_render(pagination) }}
+</div>
+
 {% endblock %}
 
