--- a/templates/admin/guests/add.html.twig
+++ b/templates/admin/guests/add.html.twig
@@ -3,7 +3,15 @@
 {% block admin %}
     <h1>Ajouter un invité</h1>
 
-    {{ form_start(form) }}
+    {% if form.vars.errors|length > 0 %}
+        <div class="alert alert-danger">
+            {% for error in form.vars.errors %}
+                <div>{{ error.message }}</div>
+            {% endfor %}
+        </div>
+    {% endif %}
+
+    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
         {{ form_row(form.name) }}
         {{ form_row(form.email) }}
         {{ form_row(form.password) }}
@@ -13,6 +21,5 @@
             <a href="{{ path('admin_guests') }}" class="btn btn-secondary">← Retour à la liste</a>
         </div>
     {{ form_end(form) }}
-    
 
 {% endblock %}
